fixed members not showing on group members page

--- a/app/assets/stylesheets/tioki/main.scss
+++ b/app/assets/stylesheets/tioki/main.scss
@@ -1171,6 +1171,12 @@ section.jobs-management {
 }
 
 table.applications {
+	width: 100%;
+
+	&.equal td {
+		width: auto;
+	}
+
 	td {
 		vertical-align: top;
 		border: solid 1px #DADADA;
